All interpreter tests passed.